--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //"conStr": "server=39.108.145.219;database=Hospital;uid=sa;pwd=As19961122"
     "conStr": "server=localhost;database=Hospital;uid=sa;pwd=660697"
   },
   "iisSettings": {
